# docs/swagger.yaml
@@ -100,6 +100,40 @@ paths:
       summary: Download file from S3
       tags:
       - files
+  /list:
+    get:
+      description: Lists all files in a specified folder within the configured S3
+        bucket and returns their download links.
+      parameters:
+      - description: Folder inside the bucket
+        in: query
+        name: folder
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              type: string
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "405":
+          description: Method Not Allowed
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: List files in S3 folder
+      tags:
+      - files
   /send:
     post:
       consumes:
